{
    "name": "InputController",
    "maps": [
        {
            "name": "CameraController",
            "id": "f3efd799-4c0e-4585-b59b-94adb57a4abc",
            "actions": [
                {
                    "name": "Zoom",
                    "type": "PassThrough",
                    "id": "57b5183e-ee98-4b26-9dd2-8ed7d61e0fef",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "CrlPressed",
                    "type": "Button",
                    "id": "5658c61a-bb20-42fa-b9c6-56cdd8435c5e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Pan",
                    "type": "Button",
                    "id": "88521e48-272d-4d48-9f2b-e2e6491d4d69",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Rotate",
                    "type": "Button",
                    "id": "497557c9-ec4b-4e8d-8970-b03cb0e76b50",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "DeltaPos",
                    "type": "Value",
                    "id": "e02e14c7-8e9e-4161-b5af-4b35c2ccb163",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Pos",
                    "type": "Value",
                    "id": "9d0fb0c0-a01e-4ba5-9f94-d608beb65955",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "LClick",
                    "type": "Button",
                    "id": "c4b0cf7b-02b0-4aca-8384-d9324b21168b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Scroll",
                    "type": "Value",
                    "id": "39db0ca3-eeec-4ddf-b1b9-3d766fea1cfb",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "0d67091d-d853-4f74-92a3-cc08d3f1766d",
                    "path": "<Mouse>/scroll/y",
                    "interactions": "",
                    "processors": "Normalize(min=-1,max=1)",
                    "groups": "",
                    "action": "Zoom",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "48344a7d-446e-4ee9-8876-7f751223cf6c",
                    "path": "<Mouse>/middleButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Pan",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3699c10f-b279-4f06-b591-4ff87e4c831d",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Rotate",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "df445125-e6c8-4eee-bcc5-79b2d3cb3291",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "DeltaPos",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a622b2e8-5355-4db8-a88c-cae7e89ecd2c",
                    "path": "<Keyboard>/ctrl",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyBoard&Mouse",
                    "action": "CrlPressed",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "81a2a355-df9f-4292-90e1-091579d62e1f",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyBoard&Mouse",
                    "action": "Pos",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "793f0ddc-1a4d-4840-9ecb-2fbc39059587",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "70be37bb-92b9-430c-8dd5-a16d82a81dcc",
                    "path": "<Mouse>/scroll/y",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Scroll",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "ObjectGroup",
            "id": "a3e9804c-ba85-4fed-a1d1-578fe82bb87e",
            "actions": [
                {
                    "name": "CrlPressed",
                    "type": "Value",
                    "id": "aa4ab0fd-a926-45b6-af3f-f8a018c411d4",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Pos",
                    "type": "Value",
                    "id": "ac7c8b37-098f-44ba-9013-f1e1835a0cb2",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "DeltaPos",
                    "type": "Value",
                    "id": "692dcaf4-0a1b-4333-890a-878ca856fabe",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "LClick",
                    "type": "Button",
                    "id": "434a6b86-c3c0-49ff-bb37-43957d13ca7d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "MClick",
                    "type": "Button",
                    "id": "29d3a435-fd3f-49a4-a34c-40a5041e230f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "18a188c9-c5d5-41dd-ba6e-1b1b3ec92df1",
                    "path": "<Keyboard>/ctrl",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyBoard&Mouse",
                    "action": "CrlPressed",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "374a8cff-90f7-4236-8ba3-c7f2aa93eef1",
                    "path": "<Mouse>/middleButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8081f7be-5619-4db1-abae-3a84c77510df",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "25abd274-a8d8-41ec-909f-5a0129b04459",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "DeltaPos",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ad441153-eb84-4f1b-bdb1-cea3c6464529",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyBoard&Mouse",
                    "action": "Pos",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "KeyBoard&Mouse",
            "bindingGroup": "KeyBoard&Mouse",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Mouse>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}